# wjwwood-serial

./: CHANGELOG.rst  CMakeLists.txt  README.md  USAGE.md
examples/: CMakeLists.txt
include/serial/: serial.h
src/impl/: win.cc
src/impl/list_ports/: list_ports_linux.cc
